<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/username_input"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:textSize="15dp"
                    android:text="14822"
                    android:theme="@style/MyEditText"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="密    码"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:textSize="15dp"
                    android:text="4823C45E494707C5"
                    android:theme="@style/MyEditText"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cB_remmber"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-90dp"
                android:freezesText="false"
                android:text="@string/opt_remember"
                android:textColorLink="@color/colorPrimary"
                android:textIsSelectable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_userlogin"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/roundbutton"
                android:onClick="login"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_clean"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/roundbutton"
                android:onClick="cleanInfo"
                android:text="清空" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>